--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
+napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
 napi-derive = "2.12.2"
-oogway = { git = "https://github.com/cs50victor/oogway_ai", version = "0.1.0" }
+oogway = { git = "https://github.com/cs50victor/oogway_ai", branch = "main" }
 
 [build-dependencies]
 napi-build = "2.0.1"
