--- a/npm/linux-x64-gnu/package.json
+++ b/npm/linux-x64-gnu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cs50victor/oogway-linux-x64-gnu",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "os": [
     "linux"
   ],
@@ -14,6 +14,10 @@
   "license": "MIT",
   "engines": {
     "node": ">= 10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cs50victor/oogway_js.git"
   },
   "libc": [
     "glibc"
